Bug 593307. Ensure centerscreen windows are initially created in a valid screen position. r=jst,jmathies a=blocking-final